--- a/style.css
+++ b/style.css
@@ -111,3 +111,14 @@
     font-size: 12px;
     color: rgb(36, 34, 34);
 }
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 150px;
+}
+
+.quote-author {
+    text-align: right;
+    margin-top: 10px;
+}
