--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@
 }
 
 .button {
-    background-color: #3882f6;
+    background-color: #FFD700;
     border: none;
-    color: white;
+    color: black;
     padding: 5px 15px;
     border-radius: 8px;
 }
@@ -121,4 +121,27 @@
 .quote-author {
     text-align: right;
     margin-top: 10px;
+}
+
+.action-container {
+    display: flex;
+    margin: 25px 100px;
+    padding: 25px;
+    border: 1px solid black;
+    background-color: #CC0000;
+    color: #FFD700;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.revolution-button {
+    background-color: #FFD700;
+    border: none;
+    color: black;
+    padding: 5px 15px;
+    margin-left: 10px;
+    border-radius: 8px;
 }
