--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 
-.header-container {
+.header-container,
+.copyright-container {
     display: flex;
     background-color: #CC0000;
     color: #FFD700;
@@ -144,4 +145,9 @@
     padding: 5px 15px;
     margin-left: 10px;
     border-radius: 8px;
+}
+
+.copyright-container {
+    flex-basis: 100%;
+    justify-content: center;
 }
